# pi-pico-template

./: CMakeLists.txt  README.md  template.c
